2002-09-08  Masatake YAMATO  <yamato@redhat.com>

	* configure.in: Version 0.30.4.
	LT_CURRENT = 1, LT_AGE = 1.

	* output-pstoedit.h: Addec comments about MT unsafe.

	* output-pstoedit.c (get_last_suffix): New file.
	Use get_last_suffix in all functions in output-pstoedit.c.

2002-09-06  Masatake YAMATO  <yamato@redhat.com>
 		
	* main.c: removed unnecessary '\n' in FATAL*.
	
	* output.c (at_output_get_handler_by_suffix): used
	output_pstoedit_get_writer.

2002-09-05  Masatake YAMATO  <yamato@redhat.com>

	* output-pstoedit.[ch]: Use at_string.
	(output_pstoedit_get_writer): New function.
	(output_pstoedit_set_last_suffix): deleted.

	* output-pstoedit.c (get_symbolicname): New function.
	(remove_tmpfile): Print tmp file names if BO_DEBUG is 1.
	(output_pstoedit_writer): Use two temporary files to keep 
	both the command line syntax of autotrace and the 
	pstoedit API. 
	(output_pstoedit_suffix): New variable.

	* output.c (streq): New function.
	(at_output_get_handler_by_suffix): Call 
	output_pstoedit_set_last_suffix.
	(at_output_list_new): Use both suffixes and symbolicnames.
	(at_output_shortlist): Likewise.
	(output_is_static_member): Check both suffixes and symbolicnames.

	* output-pstoedit.[ch] (output_pstoedit_set_last_suffix): 
	New function.

	* main.c (output_list_formats): gave more
	spaces to the output formats.

2002-08-27  Masatake YAMATO  <yamato@redhat.com>

	* configure.in: 0.30.3.
	library version is set to 1.0.1.

	* logreport.h (at_log_file): Renamed from
	log_file. I guess the symbol `log_file'
	conflicts with something defined on debian libc.
	The bug is reported by Gerhard Gaussling <ggrubbish@web.de>.

2002-07-10  Martin Weber <martweb@gmx.net>

	* output.c (at_spline_list_foreach, at_spline_list_array_foreach): 
	Added "unsigned" to `i`.
	included strgicmp.h.

	Message-ID: <3D2B3A63.9B8AE188@gmx.net>.
	
2002-07-09  Masatake YAMATO  <yamato@redhat.com>

	* configure.in: Version 0.30.2.

2002-07-01  Masatake YAMATO  <yamato@redhat.com>
